# service-paid-content

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_article_preview_article_image_article_is_sub_and_more.py  0003_alter_comment_options_comment_creation_date_and_more.py  0004_article_video_url.py  0005_alter_comment_article.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  blog_main.html  comment_confirm_delete.html  comment_form.html
blog/templatetags/: my_tags.py
config/: settings.py  urls.py
static/css/: bootstrap.min.css  carousel.css  sidebars.css
static/images/: main_1  main_2  main_3
subscription/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py  0002_payment_plan.py  0003_paidsubscription_active_and_more.py
subscription/scr/: pay.py  services.py
subscription/templates/subscription/: payment.html
users/: adapters.py  admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_comment_user_description_and_more.py  0003_user_about_me_alter_user_creation_date.py  0004_subplan.py  0005_alter_subplan_length.py  0006_alter_subplan_owner.py  0007_subplan_stripe_price_id_subplan_stripe_product_id_and_more.py  0008_alter_subplan_stripe_price_id_and_more.py  0009_alter_user_phone_verify.py
(+12 files in other folders)
